--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       Pacman - James Henderson
     </title>
   </head>
+  TEST
   <body>
     <script src="compiled/bundle.js"></script>
   </body>
