Work on rendering to dom - implemented Ocanvas

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <title>
       Pacman - James Henderson
     </title>
+    <link rel='stylesheet' href='/css/index.css'/>
   </head>
-  TEST
   <body>
+    <h1 id='title'>Pacman</h1>
+    <div id="app">
+      <canvas id='pacmanGame' width="672" height="744"></canvas>
+    </div>
     <script src="compiled/bundle.js"></script>
   </body>
 </html>
